// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toast > should render 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-warning-700 bg-theme-warning-100 dark:bg-theme-warning-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-warning-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as danger toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-danger-700 bg-theme-danger-100 dark:bg-theme-danger-500"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-cross"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M7 13l6-6M13 13L7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-danger-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as hint toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-hint-700 bg-theme-hint-100 dark:bg-theme-hint-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-question-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
              />
              <path
                d="M10 13.6h0M8.3 7.9c0-.9.7-1.7 1.7-1.7s1.7.7 1.7 1.7c0 .7-.4 1.4-1.2 1.6-.3.1-.5.4-.5.7v.8"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-hint-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as info toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-info-700 bg-theme-info-100 dark:bg-theme-info-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-info"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 9.2v5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 5.8h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-info-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as success toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-success-700 bg-theme-success-100 dark:bg-theme-success-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-check-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-success-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Toast > should render as warning toast 1`] = `
<DocumentFragment>
  <div
    class="flex items-stretch overflow-hidden md:rounded-xl"
  >
    <div
      class="flex items-center px-4 justify-center dark:text-white text-theme-warning-700 bg-theme-warning-100 dark:bg-theme-warning-700"
    >
      <div>
        <div
          style="height: 16px; width: 16px;"
        >
          <svg
            id="circle-exclamation-mark"
            style="height: 100%; width: 100%;"
            viewBox="0 0 20 20"
            x="0"
            xml:space="preserve"
            xmlns="http://www.w3.org/2000/svg"
            y="0"
          >
            <g
              fill="none"
              stroke="currentColor"
              stroke-width="2"
            >
              <circle
                cx="10"
                cy="10"
                r="9"
                stroke-miterlimit="10"
              />
              <path
                d="M10 10.5v-5"
                stroke-linecap="round"
                stroke-miterlimit="10"
              />
              <path
                d="M10 14h0"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
    <div
      class="w-full py-3 px-4 text-sm leading-relaxed break-words overflow-hidden text-left dark:bg-theme-secondary-800 bg-theme-warning-50"
    >
      <span>
        Hello World!
      </span>
    </div>
  </div>
</DocumentFragment>
`;
